--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,39 +1,26 @@
-<h1>BURGERS</h1>
+<h1>BURGER TIME</h1>
 
-<h2>Burgers that have been DEVOURED!</h2>
-
-<ul>
-{{#each burgers}}
-          {{#if this.devoured}}
-            <li>
-              {{this.id}}
-              {{this.burger_name}}
-
-            </li>
-          {{/if}}
-        {{/each}}
-</ul>
-
-<h2>Burgers that have NOT been devoured!</h2>
+<h2>Burgers that have not been devoured</h2>
 
 <ul>
-      {{#each burgers}}
-          {{#unless this.devoured}}
-            <li>
-              {{this.id}}
-              {{this.burger_name}}
-
-              <form action="/{{this.id}}?_method=PUT" method="POST">
-                <input type="hidden" name="devoured" value="true">
-                <button class="btn-primary" type="submit">Devour It!</button>
-              </form>
-
-            </li>
-          {{/unless}}
-        {{/each}}
+  {{#each burgers}}
+    {{#unless devoured}}
+      {{> burgers/burger-block devoured=true}}
+    {{/unless}}
+  {{/each}}
 </ul>
 
-<h2>Add a Burger</h2>
+<h2>Devoured Burger List</h2>
+
+<ul>
+  {{#each burgers}}
+    {{#if devoured}}
+      {{> burgers/burger-block devoured=false}}
+    {{/if}}
+  {{/each}}
+</ul>
+
+<h2>Add a BURGER!</h2>
 <form class="create-form">
 
   <div class="form-group">
@@ -42,9 +29,9 @@
   </div>
 
   <div class="form-group">
-    <label for="devoured">Devoured?</label><br>
+    <label for="slee">Has this burger been devoured?</label><br>
     <input type="radio" name="sleepy" value="1" checked> Devoured<br>
-    <input type="radio" name="sleepy" value="0"> No
+    <input type="radio" name="sleepy" value="0"> READY TO EAT!
   </div>
 
   <button type="submit">Add Burger</button>
